--- a/final_report/sections/survey_generation_doc.tex
+++ b/final_report/sections/survey_generation_doc.tex
@@ -1,1 +1,7 @@
 \documentclass[../final.tex]{subfiles}
+
+\begin{document}
+\subsection{Overview}
+\subsection{Data Flow}
+\subsection{Code Walk Through}
+\end{document}
