added things learned

--- a/final_report/final.tex
+++ b/final_report/final.tex
@@ -80,10 +80,14 @@
 \subsection{Report Generation}
 \section{Reflection}
 \subsection{How to Learn}
+For learning how to use new technology we did not use any books and we did not get outside help from other people that were not involved in our group. We learned new technology by researching the things that we needed on the fly. The majority of the things we needed were found in StackOverflow pages. Another website was useful was w3schools for looking up how to use a CSS style sheet, HTML, and PHP. This website was useful by providing code examples and also by generating the results of the code. below is the order of usefulness of the websites:
+1.StackOverflow
+2.w3schools
 \subsection{What was Learned}
 \subsection{Shannon Ernst: Survey Generation}
 \subsection{Kyle Nichols: Database Management}
 \subsection{Javier Franco: Report Generation}
+The 
 
 %\bibliographystyle{ieeetr}
 %\bibliography{writing1}
