working on survey documentation

--- a/final_report/sections/survey_generation_doc.tex
+++ b/final_report/sections/survey_generation_doc.tex
@@ -2,6 +2,29 @@
 
 \begin{document}
 \subsection{Overview}
+Survey generation is the first step in using the website. Without a created 
+survey there is no way to collect data and analyze it. On a clean implementation 
+of the database, there will not be any surveys to preload. To create a survey the 
+admin will navigate from the dashboard to the Edit/Create Survey page. On this page 
+the admin will provide the appropriate title for the survey via text box, associated 
+camp via drop down, and indicate the type of survey via radio buttons. Once this 
+intial data has been provided, the admin can add questions by selecting from the 
+Add Question drop down and may select either text, matrix or multiple choice. This 
+question will be added to the survey and the admin will be able to fill in the 
+appropriate information pertaining to that question. Once the admin has finished adding 
+questions they can preview the survey by clicking Preview. This will open a pop up 
+window with the html that will be generated for a user taking the survey. Once the admin 
+is satisfied with the survey they can save the survey via the Save button. Saving the 
+survey does not redirect the user from the page. To exit the user will have to click 
+exit. \\
+To recall a survey to be edited, the admin can select from the drop down at the top 
+of the Edit/Create page the survey they want to edit. This will reload all information 
+associated with this survey into the appropriate question templates to allow for 
+editing. The admin will have to save the survey after editing to ensure that the 
+information is updated. The admin also has the ability to mark questions as frequently 
+used. If a question is marked frequently used it will appear in a frequently used 
+drop down menu to be seleceted to add to the survey. These questions are also editable 
+within the survey but can never be updated in the database in any way. \\ 
 \subsection{Data Flow}
 \subsection{Code Walk Through}
 \end{document}
